@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.140 2005/01/10 01:05:59 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.141 2005/01/10 01:16:07 zhen Exp $
+
+  09 Jan 2005; John Davis <zhen@gentoo.org> targets/embedded/embedded.sh,
+  +targets/embedded/kmerge.sh:
+  partial fix for #76542, waiting for the necessary patch to modules/embedded.py
+  from mutex@gentoo.org
 
   09 Jan 2005; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
   modules/livecd_stage2_target.py:
